--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="user-profile">
                     <img src="images/profile-pic.png">
                     <div>
-                        <p>User</p>
+                        <p>Paul Paludan Poulsen</p>
                         <small>Public <i class="fas fa-caret-down"></i></small>
                     </div>
                 </div>
